# libtre

./: .gitignore  ChangeLog  Makefile.am  README.git  aclocal.m4  autogen.sh  configure.ac
lib/: tre-ast.h  tre-compile.c  tre-compile.h  tre-internal.h  tre-match-utils.h  tre-parse.c  tre.h
lib/tre/: regex.h
po/: fi.po  tre.pot
src/: agrep.c
tests/: retest.c
utils/: autogen.sh  build-release.sh  build-sources.sh
win32/: agrep.2010.vcxproj  config.h  libtre_dll.2005.vcproj  libtre_dll.2008.vcproj  libtre_dll.2010.vcxproj  libtre_dll.2010.vcxproj.filters  libtre_lib.2005.vcproj  libtre_lib.2008.vcproj  libtre_lib.2010.vcxproj  libtre_lib.2010.vcxproj.filters  retest.2005.vcproj  retest.2008.vcproj  retest.2010.vcxproj  retest.2010.vcxproj.filters  retestw.2008.vcproj  retestw.2010.vcxproj  tre.2005.sln  tre.2008.sln  tre.2010.sln  tre.def
